Commit final do projeto